--- a/login.htm
+++ b/login.htm
@@ -13,7 +13,7 @@
             Become a member - don't miss out on deals,offers,discounts and bonus vouchers.</p>
         </header>
         <main class="main2">
-        <form name="f1" method="get" action="Home.htm">
+        <form name="f1" method="get" action="index.htm">
             NAME:
             <INPUT required type="TEXT" NAME="TXTUID" PLACEHOLDER="ENTER YOUR NAME">
                 <BR><br>
